# umap

./: .env  .env.example  .gitignore  HANKO_IMPLEMENTATION.md  Makefile  README.md  compose.dev.yml  compose.init.yml  compose.login-hanko.yaml  compose.yml  docker-compose.dev.yml  docker-compose.yml  env.docker.sample  env.local.sample  env.prod.sample  env.sample  nginx-traefik.conf  settings.py  urls.py  views.py  wsgi.py
.github/workflows/: build_and_deploy.yml  build_and_deploy_dev.yml  (+3 more)
app/: .dockerignore  Dockerfile  backup.py  entrypoint.sh  pyproject.toml  settings.py  start.sh  test_usermapping.sh  urls.py  wsgi.py
app/custom/: hanko_helpers.py
app/custom/static/umap/: hot-font-face.css  hot.css  theme.css
app/custom/static/umap/js/: hanko-auth.esm.js  tool-menu.esm.js  tool-menu.umd.js
app/custom/templates/umap/: content.html  dashboard_menu.html  hanko_auth.html  header.html  navigation.html
app/hotumap/: admin.py  admin_routes_wrapper.py  admin_urls.py  admin_views.py  api.py  apps.py  auth_urls.py  chatmap.py  context_processors.py  dashboard_views.py  decorators.py  hanko_helpers.py  hanko_middleware.py  hanko_views.py  maps_urls.py  middleware.py  test_hanko_auth.py  test_runner.py  views.py
app/hotumap/migrations/: 0001_initial.py
app/hotumap/tests/: base.py  test_helpers.py  test_middleware.py  test_views.py
app/scripts/: import-tilelayers.csv  import-tilelayers.sh  import-tilelayers.sql  wait-for-db.sh
custom/: tilelayers.csv
docker/: entrypoint.sh
hotumap/: apps.py  models.py  serializers.py  views.py
nginx/: umap-init.conf
(+11 files in other folders)
